# disattend

./: .gitignore  README.md  pyproject.toml
docs/: lab_notebook.md  setup_verified.md
notebooks/: 01_sanity_load_dit.ipynb
scripts/: bench_dit_train_step.py  sanity_load_dit.py  verify_setup.py
